--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+  <h1>Cromação de hastes</h1>
+  <input type="text">
+  <input type="button" value="Buscar">
 <table>
   <thead>
     <tr>
