adicionado background linear

--- a/hastes.html
+++ b/hastes.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Cromação de hastes</h1>
-    <p><a href="index.html">Voltar</a></p>
+    <p><a href="index.html">voltar</a></p>
   </header>
   <input type="number">
   <input class="botao" type="button" value="Buscar">
