adiconando conteudo html

--- a/hastes.html
+++ b/hastes.html
@@ -22,6 +22,12 @@
     </tr>
   </thead>
   <tbody>
+    <tr class="cinza"><td>018 <strong>0009</strong></td><td>20</td><td>10</td><td>227,0</td><td>228,1</td><td>19,990</td><td>19,973</td><td>4400</td><td>13</td><td>47</td><td>SIM</td><td></td><td></td></tr>
+    <tr class="branco"><td>018 <strong>0010</strong></td><td>22</td><td>15</td><td>212,5</td><td>229,5</td><td>21.990</td><td>21,973</td><td>5000</td><td>17</td><td>47</td><td>NÃO</td><td></td><td></td></tr>
+    <tr class="cinza"><td>018<strong>0012</strong></td><td>20</td><td>15</td><td>214,0</td><td>219,5</td><td>19,990</td><td>19,973</td><td>5000</td><td>17</td><td>47</td><td>NÃO</td><td></td><td></td></tr>
+    <tr class="branco"><td>018 <strong>0013</strong></td><td>20</td><td>15</td><td>215,4</td><td>216,5</td><td>19,990</td><td>19,973</td><td>5000</td><td>17</td><td>47</td><td>NÃO</td><td>0181927</td><td></td></tr>
+    
+
     <tr class="cinza"><td>018<strong class="code">1439</strong></td><td>22</td><td>12</td><td>198,0</td><td>199,1</td><td>21,990</td><td>21,973</td><td>5000</td><td>20</td><td>47</td><td>NÃO</td><td></td><td>QETAM09619</td></tr>
     <tr class="branco"><td>018<strong class="code">1480</strong></td><td>20</td><td>10</td><td>231,1</td><td>232,2</td><td>19,990</td><td>19,973</td><td>4800</td><td>13</td><td>47</td><td>SIM</td><td></td><td>QETAM09619</td></tr>
     <tr class="cinza"><td>018<strong class="code">1506</strong></td><td>20</td><td>12</td><td>222,2</td><td>223,3</td><td>19,990</td><td>19,973</td><td>4250</td><td>13</td><td>47</td><td>SIM</td><td></td><><td></td></tr>
